--- a/auto-mpg.ipynb
+++ b/auto-mpg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 18,
    "id": "33cab07d-514f-4cd5-b34e-5a454264840d",
    "metadata": {},
    "outputs": [],
@@ -15,22 +15,24 @@
     "from sklearn.model_selection import train_test_split\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.impute import SimpleImputer"
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.metrics import explained_variance_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 2,
    "id": "c472129e-4b63-4389-8e41-8336fafccef3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Setting columns names\n",
     "columns = ['mpg', 'cylinders', 'displacement', 'horsepower', 'weight', 'acceleration', 'model_year', 'origin', 'name']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 3,
    "id": "f1b0e4b6-e606-4d06-b56c-b33fe42872d0",
    "metadata": {},
    "outputs": [
@@ -234,20 +236,19 @@
        "[398 rows x 9 columns]"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "df = pd.read_csv('E:/Repos/Automobile/auto-mpg.tsv', sep = '\\s+', names = ['mpg', 'cylinders', 'displacement', 'horsepower', 'weight', 'acceleration', 'model_year', 'origin', 'name'] )\n",
-    "df"
+    "#reading tsv file\n",
+    "df = pd.read_csv('E:/Repos/Automobile/auto-mpg.tsv', sep = '\\s+', names = ['mpg', 'cylinders', 'displacement', 'horsepower', 'weight', 'acceleration', 'model_year', 'origin', 'name'] )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 4,
    "id": "a8a75ef5-a64a-4ed9-bdec-bd82ef24b916",
    "metadata": {},
    "outputs": [
@@ -257,7 +258,7 @@
        "False"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 5,
    "id": "c0cd14ad-7e19-4d41-b823-cf3d1449710e",
    "metadata": {},
    "outputs": [
@@ -299,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 6,
    "id": "a14234c2-c62c-45e3-80ca-2c2a2c4c4826",
    "metadata": {},
    "outputs": [
@@ -325,21 +326,12 @@
     "\n",
     "print(\"# Linhas no dataframe {0}\".format(len(df)))\n",
     "for x in columns:\n",
-    "    print(\"# Linhas missing em \" + x + \" {0}\".format(len(df.loc[df[x] == '?']))) \n",
-    "\n",
-    "#print(\"# Linhas missing em cylinders {0}\".format(len(df.loc[df['cylinders'] == '?']))) \n",
-    "#print(\"# Linhas missing em displacement {0}\".format(len(df.loc[df['displacement'] == '?']))) \n",
-    "#print(\"# Linhas missing em horsepower {0}\".format(len(df.loc[df['horsepower'] == '?']))) \n",
-    "#print(\"# Linhas missing em weight {0}\".format(len(df.loc[df['weight'] == '?']))) \n",
-    "#print(\"# Linhas missing em acceleration {0}\".format(len(df.loc[df['acceleration'] == '?']))) \n",
-    "#print(\"# Linhas missing em model_year {0}\".format(len(df.loc[df['model_year'] == '?']))) \n",
-    "#print(\"# Linhas missing em origin {0}\".format(len(df.loc[df['origin'] == '?']))) \n",
-    "#print(\"# Linhas missing em name {0}\".format(len(df.loc[df['name'] == '?']))) \n"
+    "    print(\"# Linhas missing em \" + x + \" {0}\".format(len(df.loc[df[x] == '?']))) \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 7,
    "id": "c45a0914-ea76-43ad-a82d-170850b0912c",
    "metadata": {},
    "outputs": [],
@@ -350,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 8,
    "id": "c5ebc358-cfac-43f8-ba51-f6cdae030aff",
    "metadata": {},
    "outputs": [
@@ -380,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 9,
    "id": "58af8047-21d2-4432-8711-dfaee4e7b6ee",
    "metadata": {},
    "outputs": [
@@ -401,19 +393,18 @@
        "Name: mpg, Length: 398, dtype: float64"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Y = df['mpg']\n",
-    "Y"
+    "Y = df['mpg']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 10,
    "id": "74d58dfe-d668-4709-b721-65e40d95e45e",
    "metadata": {},
    "outputs": [
@@ -568,312 +559,111 @@
        "[398 rows x 6 columns]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#defining features\n",
+    "#defining both features\n",
     "features1 = ['cylinders', 'displacement', 'horsepower', 'weight', 'acceleration', 'model_year']\n",
     "features2 = ['cylinders', 'displacement', 'horsepower', 'weight', 'acceleration']\n",
     "X1 = df[features1]\n",
-    "X2 = df[features2]\n",
-    "X1"
+    "X2 = df[features2]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d78e46c2-eb98-4c09-903a-d4c5b01a8a49",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 11,
    "id": "bd87b868-7ebd-4f51-8423-91b479c0adee",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cylinders</th>\n",
-       "      <th>displacement</th>\n",
-       "      <th>horsepower</th>\n",
-       "      <th>weight</th>\n",
-       "      <th>acceleration</th>\n",
-       "      <th>model_year</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>245</th>\n",
-       "      <td>4</td>\n",
-       "      <td>98.0</td>\n",
-       "      <td>66.00</td>\n",
-       "      <td>1800.0</td>\n",
-       "      <td>14.4</td>\n",
-       "      <td>78</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>110</th>\n",
-       "      <td>4</td>\n",
-       "      <td>108.0</td>\n",
-       "      <td>94.00</td>\n",
-       "      <td>2379.0</td>\n",
-       "      <td>16.5</td>\n",
-       "      <td>73</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>6</td>\n",
-       "      <td>199.0</td>\n",
-       "      <td>97.00</td>\n",
-       "      <td>2774.0</td>\n",
-       "      <td>15.5</td>\n",
-       "      <td>70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>66</th>\n",
-       "      <td>8</td>\n",
-       "      <td>304.0</td>\n",
-       "      <td>150.0</td>\n",
-       "      <td>3672.0</td>\n",
-       "      <td>11.5</td>\n",
-       "      <td>72</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>153</th>\n",
-       "      <td>6</td>\n",
-       "      <td>250.0</td>\n",
-       "      <td>105.0</td>\n",
-       "      <td>3459.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>71</th>\n",
-       "      <td>3</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>97.00</td>\n",
-       "      <td>2330.0</td>\n",
-       "      <td>13.5</td>\n",
-       "      <td>72</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>106</th>\n",
-       "      <td>8</td>\n",
-       "      <td>350.0</td>\n",
-       "      <td>180.0</td>\n",
-       "      <td>4499.0</td>\n",
-       "      <td>12.5</td>\n",
-       "      <td>73</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>270</th>\n",
-       "      <td>4</td>\n",
-       "      <td>134.0</td>\n",
-       "      <td>95.00</td>\n",
-       "      <td>2515.0</td>\n",
-       "      <td>14.8</td>\n",
-       "      <td>78</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>348</th>\n",
-       "      <td>4</td>\n",
-       "      <td>89.0</td>\n",
-       "      <td>62.00</td>\n",
-       "      <td>2050.0</td>\n",
-       "      <td>17.3</td>\n",
-       "      <td>81</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>102</th>\n",
-       "      <td>4</td>\n",
-       "      <td>97.0</td>\n",
-       "      <td>46.00</td>\n",
-       "      <td>1950.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>73</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>298 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     cylinders  displacement horsepower  weight  acceleration  model_year\n",
-       "245          4          98.0      66.00  1800.0          14.4          78\n",
-       "110          4         108.0      94.00  2379.0          16.5          73\n",
-       "16           6         199.0      97.00  2774.0          15.5          70\n",
-       "66           8         304.0      150.0  3672.0          11.5          72\n",
-       "153          6         250.0      105.0  3459.0          16.0          75\n",
-       "..         ...           ...        ...     ...           ...         ...\n",
-       "71           3          70.0      97.00  2330.0          13.5          72\n",
-       "106          8         350.0      180.0  4499.0          12.5          73\n",
-       "270          4         134.0      95.00  2515.0          14.8          78\n",
-       "348          4          89.0      62.00  2050.0          17.3          81\n",
-       "102          4          97.0      46.00  1950.0          21.0          73\n",
-       "\n",
-       "[298 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#splitting the data \n",
+    "#splitting the data 1\n",
     "X1_train, X1_test, y_train, y_test = train_test_split(X1, Y, test_size=0.25, random_state = 42, shuffle = True)\n",
-    "X1_train"
+    "X1_train\n",
+    "#splitting the data 2\n",
+    "X2_train, X2_test, y_train, y_test = train_test_split(X2, Y, test_size=0.25, random_state = 42, shuffle = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "id": "9f91ae9b-a105-465e-a3b9-aa52b6cb6c92",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "245    36.1\n",
-       "110    22.0\n",
-       "16     18.0\n",
-       "66     17.0\n",
-       "153    18.0\n",
-       "       ... \n",
-       "223    15.5\n",
-       "258    20.6\n",
-       "301    34.2\n",
-       "183    25.0\n",
-       "327    36.4\n",
-       "Name: mpg, Length: 100, dtype: float64"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_train.head(100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 13,
    "id": "139ae8aa-d2b2-49cb-befe-09bdc47af1e1",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#deleting missing values\n",
     "substitute_0_to_mean = SimpleImputer(missing_values = '?', strategy = 'most_frequent')\n",
     "\n",
     "X1_train = substitute_0_to_mean.fit_transform(X1_train)\n",
     "X1_test = substitute_0_to_mean.fit_transform(X1_test)\n",
-    "from sklearn.impute import SimpleImputer"
+    "X2_train = substitute_0_to_mean.fit_transform(X2_train)\n",
+    "X2_test = substitute_0_to_mean.fit_transform(X2_test)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 34,
    "id": "bfee17cb-f2a4-4f85-9570-ced52fd9437b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\facla\\anaconda3\\lib\\site-packages\\sklearn\\svm\\_base.py:1206: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "LinearSVR()"
+       "SVR()"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model1 = svm.LinearSVR()\n",
+    "#training SVR model for X1 Dataset\n",
+    "model1 = svm.SVR()\n",
     "model1.fit(X1_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 35,
    "id": "3ea1923f-f8c3-40fa-aa9a-c223d2cbb195",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#making prediction SVR model for X1 Dataset\n",
     "predict_model1 = model1.predict(X1_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 40,
    "id": "e796f9c5-653f-4dee-b962-4a07099dd06d",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.7728499711183107"
-      ]
-     },
-     "execution_count": 120,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7424\n"
+     ]
     }
    ],
    "source": [
-    "from sklearn.metrics import explained_variance_score\n",
-    "explained_variance_score(y_test, predict_model1)"
+    "print(\"Accuracy: {0:.4f}\".format(explained_variance_score(y_test, predict_model1)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 37,
    "id": "5fb94fa6-a512-4a71-80f0-f386575ebc8f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model2 = RandomForestRegressor(max_depth=2, random_state=0)\n",
+    "#training and Predicting RandomForestRegressor model for X1 Dataset\n",
+    "model2 = RandomForestRegressor(max_depth=5, random_state=1, n_estimators = 100)\n",
     "model2.fit(X1_train, y_train)\n",
     "\n",
     "predict_model2 = model2.predict(X1_test)"
@@ -881,29 +671,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 44,
    "id": "f2540932-e150-492f-9d65-6c591169dd67",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.8217607614993552"
-      ]
-     },
-     "execution_count": 122,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.8707\n"
+     ]
     }
    ],
    "source": [
-    "explained_variance_score(y_test, predict_model2)"
+    "print(\"Accuracy: {0:.4f}\".format(explained_variance_score(y_test, predict_model2)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "6a13a880-48f0-4ed5-bff7-d8c207da7998",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7424\n"
+     ]
+    }
+   ],
+   "source": [
+    "#training predicting SVR model for X2 Dataset\n",
+    "model1_1 = svm.SVR()\n",
+    "model1_1.fit(X2_train, y_train)\n",
+    "predict_model1_1 = model1_1.predict(X2_test)\n",
+    "print(\"Accuracy: {0:.4f}\".format(explained_variance_score(y_test, predict_model1_1)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "3fe2aff7-aee6-46fa-b240-ef42192bd078",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#training and Predicting RandomForestRegressor model for X2 Dataset\n",
+    "model2_2 = RandomForestRegressor(max_depth=5, random_state=1, n_estimators = 100)\n",
+    "model2_2.fit(X2_train, y_train)\n",
+    "\n",
+    "predict_model2_2 = model2_2.predict(X2_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "e7174515-ca1f-48df-a7cf-0bd735a34101",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7997\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Accuracy: {0:.4f}\".format(explained_variance_score(y_test, predict_model2_2)))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a13a880-48f0-4ed5-bff7-d8c207da7998",
+   "id": "b8fe6ebe-dcf1-43e5-ba8c-8f05658d6d74",
    "metadata": {},
    "outputs": [],
    "source": []
