--- a/auto-mpg.ipynb
+++ b/auto-mpg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "33cab07d-514f-4cd5-b34e-5a454264840d",
    "metadata": {},
    "outputs": [],
@@ -35,212 +35,7 @@
    "execution_count": 3,
    "id": "f1b0e4b6-e606-4d06-b56c-b33fe42872d0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>mpg</th>\n",
-       "      <th>cylinders</th>\n",
-       "      <th>displacement</th>\n",
-       "      <th>horsepower</th>\n",
-       "      <th>weight</th>\n",
-       "      <th>acceleration</th>\n",
-       "      <th>model_year</th>\n",
-       "      <th>origin</th>\n",
-       "      <th>name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>18.0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>307.0</td>\n",
-       "      <td>130.0</td>\n",
-       "      <td>3504.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
-       "      <td>chevrolet chevelle malibu</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>15.0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>350.0</td>\n",
-       "      <td>165.0</td>\n",
-       "      <td>3693.0</td>\n",
-       "      <td>11.5</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
-       "      <td>buick skylark 320</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>18.0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>318.0</td>\n",
-       "      <td>150.0</td>\n",
-       "      <td>3436.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
-       "      <td>plymouth satellite</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>16.0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>304.0</td>\n",
-       "      <td>150.0</td>\n",
-       "      <td>3433.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
-       "      <td>amc rebel sst</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>17.0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>302.0</td>\n",
-       "      <td>140.0</td>\n",
-       "      <td>3449.0</td>\n",
-       "      <td>10.5</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
-       "      <td>ford torino</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>393</th>\n",
-       "      <td>27.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>140.0</td>\n",
-       "      <td>86.00</td>\n",
-       "      <td>2790.0</td>\n",
-       "      <td>15.6</td>\n",
-       "      <td>82</td>\n",
-       "      <td>1</td>\n",
-       "      <td>ford mustang gl</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>394</th>\n",
-       "      <td>44.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>97.0</td>\n",
-       "      <td>52.00</td>\n",
-       "      <td>2130.0</td>\n",
-       "      <td>24.6</td>\n",
-       "      <td>82</td>\n",
-       "      <td>2</td>\n",
-       "      <td>vw pickup</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>395</th>\n",
-       "      <td>32.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>135.0</td>\n",
-       "      <td>84.00</td>\n",
-       "      <td>2295.0</td>\n",
-       "      <td>11.6</td>\n",
-       "      <td>82</td>\n",
-       "      <td>1</td>\n",
-       "      <td>dodge rampage</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>396</th>\n",
-       "      <td>28.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>120.0</td>\n",
-       "      <td>79.00</td>\n",
-       "      <td>2625.0</td>\n",
-       "      <td>18.6</td>\n",
-       "      <td>82</td>\n",
-       "      <td>1</td>\n",
-       "      <td>ford ranger</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>397</th>\n",
-       "      <td>31.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>119.0</td>\n",
-       "      <td>82.00</td>\n",
-       "      <td>2720.0</td>\n",
-       "      <td>19.4</td>\n",
-       "      <td>82</td>\n",
-       "      <td>1</td>\n",
-       "      <td>chevy s-10</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>398 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      mpg  cylinders  displacement horsepower  weight  acceleration  \\\n",
-       "0    18.0          8         307.0      130.0  3504.0          12.0   \n",
-       "1    15.0          8         350.0      165.0  3693.0          11.5   \n",
-       "2    18.0          8         318.0      150.0  3436.0          11.0   \n",
-       "3    16.0          8         304.0      150.0  3433.0          12.0   \n",
-       "4    17.0          8         302.0      140.0  3449.0          10.5   \n",
-       "..    ...        ...           ...        ...     ...           ...   \n",
-       "393  27.0          4         140.0      86.00  2790.0          15.6   \n",
-       "394  44.0          4          97.0      52.00  2130.0          24.6   \n",
-       "395  32.0          4         135.0      84.00  2295.0          11.6   \n",
-       "396  28.0          4         120.0      79.00  2625.0          18.6   \n",
-       "397  31.0          4         119.0      82.00  2720.0          19.4   \n",
-       "\n",
-       "     model_year  origin                       name  \n",
-       "0            70       1  chevrolet chevelle malibu  \n",
-       "1            70       1          buick skylark 320  \n",
-       "2            70       1         plymouth satellite  \n",
-       "3            70       1              amc rebel sst  \n",
-       "4            70       1                ford torino  \n",
-       "..          ...     ...                        ...  \n",
-       "393          82       1            ford mustang gl  \n",
-       "394          82       2                  vw pickup  \n",
-       "395          82       1              dodge rampage  \n",
-       "396          82       1                ford ranger  \n",
-       "397          82       1                 chevy s-10  \n",
-       "\n",
-       "[398 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#reading tsv file\n",
     "df = pd.read_csv('E:/Repos/Automobile/auto-mpg.tsv', sep = '\\s+', names = ['mpg', 'cylinders', 'displacement', 'horsepower', 'weight', 'acceleration', 'model_year', 'origin', 'name'] )\n"
@@ -337,7 +132,8 @@
    "outputs": [],
    "source": [
     "#Removing missing values from all df  \n",
-    "#df = df[~df.isin(['?'])]\n"
+    "#df = df[~df.isin(['?'])]\n",
+    "df = df[df.horsepower != \"?\"]"
    ]
   },
   {
@@ -350,11 +146,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# Linhas no dataframe 398\n",
+      "# Linhas no dataframe 392\n",
       "# Linhas missing em mpg 0\n",
       "# Linhas missing em cylinders 0\n",
       "# Linhas missing em displacement 0\n",
-      "# Linhas missing em horsepower 6\n",
+      "# Linhas missing em horsepower 0\n",
       "# Linhas missing em weight 0\n",
       "# Linhas missing em acceleration 0\n",
       "# Linhas missing em model_year 0\n",
@@ -375,29 +171,7 @@
    "execution_count": 9,
    "id": "58af8047-21d2-4432-8711-dfaee4e7b6ee",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0      18.0\n",
-       "1      15.0\n",
-       "2      18.0\n",
-       "3      16.0\n",
-       "4      17.0\n",
-       "       ... \n",
-       "393    27.0\n",
-       "394    44.0\n",
-       "395    32.0\n",
-       "396    28.0\n",
-       "397    31.0\n",
-       "Name: mpg, Length: 398, dtype: float64"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Y = df['mpg']"
    ]
@@ -407,163 +181,7 @@
    "execution_count": 10,
    "id": "74d58dfe-d668-4709-b721-65e40d95e45e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cylinders</th>\n",
-       "      <th>displacement</th>\n",
-       "      <th>horsepower</th>\n",
-       "      <th>weight</th>\n",
-       "      <th>acceleration</th>\n",
-       "      <th>model_year</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>8</td>\n",
-       "      <td>307.0</td>\n",
-       "      <td>130.0</td>\n",
-       "      <td>3504.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>8</td>\n",
-       "      <td>350.0</td>\n",
-       "      <td>165.0</td>\n",
-       "      <td>3693.0</td>\n",
-       "      <td>11.5</td>\n",
-       "      <td>70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>8</td>\n",
-       "      <td>318.0</td>\n",
-       "      <td>150.0</td>\n",
-       "      <td>3436.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>8</td>\n",
-       "      <td>304.0</td>\n",
-       "      <td>150.0</td>\n",
-       "      <td>3433.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>8</td>\n",
-       "      <td>302.0</td>\n",
-       "      <td>140.0</td>\n",
-       "      <td>3449.0</td>\n",
-       "      <td>10.5</td>\n",
-       "      <td>70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>393</th>\n",
-       "      <td>4</td>\n",
-       "      <td>140.0</td>\n",
-       "      <td>86.00</td>\n",
-       "      <td>2790.0</td>\n",
-       "      <td>15.6</td>\n",
-       "      <td>82</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>394</th>\n",
-       "      <td>4</td>\n",
-       "      <td>97.0</td>\n",
-       "      <td>52.00</td>\n",
-       "      <td>2130.0</td>\n",
-       "      <td>24.6</td>\n",
-       "      <td>82</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>395</th>\n",
-       "      <td>4</td>\n",
-       "      <td>135.0</td>\n",
-       "      <td>84.00</td>\n",
-       "      <td>2295.0</td>\n",
-       "      <td>11.6</td>\n",
-       "      <td>82</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>396</th>\n",
-       "      <td>4</td>\n",
-       "      <td>120.0</td>\n",
-       "      <td>79.00</td>\n",
-       "      <td>2625.0</td>\n",
-       "      <td>18.6</td>\n",
-       "      <td>82</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>397</th>\n",
-       "      <td>4</td>\n",
-       "      <td>119.0</td>\n",
-       "      <td>82.00</td>\n",
-       "      <td>2720.0</td>\n",
-       "      <td>19.4</td>\n",
-       "      <td>82</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>398 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     cylinders  displacement horsepower  weight  acceleration  model_year\n",
-       "0            8         307.0      130.0  3504.0          12.0          70\n",
-       "1            8         350.0      165.0  3693.0          11.5          70\n",
-       "2            8         318.0      150.0  3436.0          11.0          70\n",
-       "3            8         304.0      150.0  3433.0          12.0          70\n",
-       "4            8         302.0      140.0  3449.0          10.5          70\n",
-       "..         ...           ...        ...     ...           ...         ...\n",
-       "393          4         140.0      86.00  2790.0          15.6          82\n",
-       "394          4          97.0      52.00  2130.0          24.6          82\n",
-       "395          4         135.0      84.00  2295.0          11.6          82\n",
-       "396          4         120.0      79.00  2625.0          18.6          82\n",
-       "397          4         119.0      82.00  2720.0          19.4          82\n",
-       "\n",
-       "[398 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#defining both features\n",
     "features1 = ['cylinders', 'displacement', 'horsepower', 'weight', 'acceleration', 'model_year']\n",
@@ -588,24 +206,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "139ae8aa-d2b2-49cb-befe-09bdc47af1e1",
    "metadata": {},
    "outputs": [],
    "source": [
     "#deleting missing values\n",
-    "substitute_0_to_mean = SimpleImputer(missing_values = '?', strategy = 'most_frequent')\n",
+    "#substitute_0_to_mean = SimpleImputer(missing_values = '?', strategy = 'most_frequent')\n",
     "\n",
-    "X1_train = substitute_0_to_mean.fit_transform(X1_train)\n",
-    "X1_test = substitute_0_to_mean.fit_transform(X1_test)\n",
-    "X2_train = substitute_0_to_mean.fit_transform(X2_train)\n",
-    "X2_test = substitute_0_to_mean.fit_transform(X2_test)\n",
+    "#X1_train = substitute_0_to_mean.fit_transform(X1_train)\n",
+    "#X1_test = substitute_0_to_mean.fit_transform(X1_test)\n",
+    "#X2_train = substitute_0_to_mean.fit_transform(X2_train)\n",
+    "#X2_test = substitute_0_to_mean.fit_transform(X2_test)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "id": "bfee17cb-f2a4-4f85-9570-ced52fd9437b",
    "metadata": {},
    "outputs": [
@@ -615,7 +233,7 @@
        "SVR()"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "id": "3ea1923f-f8c3-40fa-aa9a-c223d2cbb195",
    "metadata": {},
    "outputs": [],
@@ -639,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "id": "e796f9c5-653f-4dee-b962-4a07099dd06d",
    "metadata": {},
    "outputs": [
@@ -647,7 +265,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.7424\n"
+      "Accuracy: 0.7149\n"
      ]
     }
    ],
@@ -657,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "id": "5fb94fa6-a512-4a71-80f0-f386575ebc8f",
    "metadata": {},
    "outputs": [],
@@ -671,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "id": "f2540932-e150-492f-9d65-6c591169dd67",
    "metadata": {},
    "outputs": [
@@ -679,7 +297,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.8707\n"
+      "Accuracy: 0.8714\n"
      ]
     }
    ],
@@ -689,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "id": "6a13a880-48f0-4ed5-bff7-d8c207da7998",
    "metadata": {},
    "outputs": [
@@ -697,7 +315,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.7424\n"
+      "Accuracy: 0.7148\n"
      ]
     }
    ],
@@ -711,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "id": "3fe2aff7-aee6-46fa-b240-ef42192bd078",
    "metadata": {},
    "outputs": [],
@@ -725,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "id": "e7174515-ca1f-48df-a7cf-0bd735a34101",
    "metadata": {},
    "outputs": [
@@ -733,7 +351,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.7997\n"
+      "Accuracy: 0.7083\n"
      ]
     }
    ],
